docroot/themes/humsci/humsci_basic/src/scss/partials/components/_global-footer.scss
// Global styles for the global footer.
.su-global-footer {
  @include font-smoothing;
  @include responsive-spacing('padding', 1 null);

  position: relative;
  z-index: $hb-z-index-global-footer;
  background-color: color(su-brand);
  color: color(su-link-reverse);

  a {
    color: color(su-link-reverse);
    text-decoration: none;

    &:hover,
    &:focus {
      color: color(su-link-reverse);
      text-decoration: underline;
    }
  }

  // Grid settings for footer nav region; passing 0 for no outer gutters.
  nav {
    margin-bottom: hb-calculate-rems(10px);
    display: flex;
    flex: 0 0 auto;
    justify-content: center;

    @include grid-media('sm') {
      display: block;

      margin-bottom: hb-calculate-rems(13px);
    }
  }
}

// Grid settings for footer container.
.su-global-footer__container {
  @include centered-column;

  @include grid-media('lg') {
    display: flex;
  }
}

// The Logo.
.su-global-footer__brand {
  padding-top: hb-calculate-rems(5px);
  @include responsive-spacing('margin', null null -2);
  text-align: center;

  a {
    @include logo;
    color: color(su-link-reverse);
    font-size: hb-calculate-rems(34px);

    &:hover,
    &:focus {
      text-decoration: none;
    }

    @include grid-media-only('xs') {
      font-size: hb-calculate-rems(32px);
    }
  }
}

.su-global-footer__content {
  @include grid-media-between('sm', 'md') {
    text-align: center;
  }

  @include grid-media('lg') {
    padding-left: hb-calculate-rems(45px);
  }

  @include grid-media('xl') {
    padding-left: hb-calculate-rems(52px);
  }

  flex-grow: 1;
}

.su-global-footer__menu {
  margin-bottom: hb-calculate-rems(10px);
  padding: 0;
  font-size: hb-calculate-rems(15px);
  list-style-type: none;

  li {
    margin: 0;
    padding: 0.25em 0;
    display: block;

    @include grid-media-only('sm') {
      margin-left: hb-calculate-rems(10px);
    }

    @include grid-media('sm') {
      display: inline-block;
      line-height: 1.1;
    }

    @include grid-media('md') {
      margin-left: hb-calculate-rems(20px);
    }

    @include grid-media('lg') {
      margin-left: hb-calculate-rems(28px);
      padding: 0;
      text-align: left;
    }

    &:last-child {
      margin-left: 0;
    }
  }
}

.su-global-footer__menu--global {
  font-weight: hb-theme-font-weight(semibold);

  @include grid-media-only('xs') {
    padding-left: hb-calculate-rems(19px);
  }

  @include grid-media-between('md', 'xl') {
    font-size: hb-calculate-rems(17px);
  }

  @include grid-media('2xl') {
    font-size: hb-calculate-rems(18px);
  }
}

.su-global-footer__menu--policy {
  @include grid-media-only('xs') {
    padding-right: hb-calculate-rems(19px);
  }

  @include grid-media-only('sm') {
    font-size: hb-calculate-rems(14px);
  }

  @include grid-media('sm') {
    a {
      font-weight: hb-theme-font-weight('regular');
    }
  }

  @include grid-media-between('md', 'lg') {
    font-size: hb-calculate-rems(15px);
  }

  @include grid-media('xl') {
    font-size: hb-calculate-rems(16px);
  }
}

.su-global-footer__copyright {
  font-size: hb-calculate-rems(14px);
  text-align: center;

  @include grid-media-only('xs') {
    font-size: hb-calculate-rems(13.4px);
  }

  span {
    white-space: nowrap;
  }

  @include grid-media('lg') {
    text-align: left;
  }
}

// Global Footer with bright red background color.

.su-global-footer--bright {
  background-color: color(su-brand-bright);
}

// Global Footer with soft black background color.

.su-global-footer--dark {
  background-color: color(su-bg-reverse);
}

